feat: json+ld support
