# app/Http/Controllers/API/V1/TermVocabularyController.php
@@ -4,26 +4,36 @@ namespace App\Http\Controllers\API\V1;
 
 use App\Filters\StatusFilter;
 use App\Filters\TermSearchFilter;
-use App\Filters\VocabularyFilter;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\IndexTermRequest;
 use App\Models\Term;
+use App\Models\Vocabulary;
 use App\Services\JsonLdTransformer;
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Pipeline;
 use OpenApi\Attributes as OA;
 
-class TermController extends Controller
+class TermVocabularyController extends Controller
 {
     /**
      * Display a listing of the resource.
      */
     #[OA\Get(
-        path: '/terms',
-        summary: "List terms",
+        path: '/vocabularies/{uuid}/terms',
+        summary: "List terms by vocabulary",
         tags: ['terms'],
-        operationId: 'indexTerms',
+        operationId: 'indexTermVocabularies',
         parameters: [
+            new OA\Parameter(
+                parameter: 'id',
+                name: 'uuid',
+                in: 'path',
+                description: 'ID',
+                required: true,
+                schema: new OA\Schema(
+                    type: 'string',
+                    format: 'string',
+                )
+            ),
             new OA\Parameter(ref: '#/components/parameters/search'),
             new OA\Parameter(ref: '#/components/parameters/page'),
             new OA\Parameter(ref: '#/components/parameters/per_page'),
@@ -55,18 +65,18 @@ class TermController extends Controller
             ),
         ]
     )]
-    public function index(IndexTermRequest $request)
+    public function index(IndexTermRequest $request, Vocabulary $vocabulary)
     {
         $perPage = $request->input('per_page', 20);
 
         $terms = Pipeline::send(
             Term::with('vocabulary')
+                ->where('vocabulary_id', $vocabulary->id)
                 ->orderBy('name')
             )
             ->through([
                 StatusFilter::class,
                 TermSearchFilter::class,
-                VocabularyFilter::class,
             ])
             ->thenReturn()
             ->paginate($perPage);
@@ -77,64 +87,5 @@ class TermController extends Controller
         }
 
         return response()->json($terms);
-    }
-
-    /**
-     * Display the specified resource.
-     */
-    #[OA\Get(
-        path: '/terms/{uuid}',
-        summary: "Show term",
-        tags: ['terms'],
-        operationId: 'showTerm',
-        parameters: [
-            new OA\Parameter(
-                parameter: 'id',
-                name: 'uuid',
-                in: 'path',
-                description: 'ID',
-                required: true,
-                schema: new OA\Schema(
-                    type: 'string',
-                    format: 'string',
-                )
-            )
-        ],
-        responses: [
-            new OA\Response(
-                response: 200,
-                description: 'OK',
-                content: [
-                    new OA\JsonContent(
-                        type: 'object',
-                        properties: [
-                            new OA\Property(
-                                property: 'data',
-                                type: 'array',
-                                items: new OA\Items(
-                                    ref: '#/components/schemas/Term'
-                                )
-                            )
-                        ]
-                    ),
-                    new OA\MediaType(
-                        'application/vnd.ld+json',
-                        schema: new OA\Schema(
-                            ref: '#/components/schemas/Term'
-                        )
-                    )
-                ]
-            ),
-        ]
-    )]
-    public function show(Term $term, Request $request)
-    {
-        $term = $term->load('vocabulary');
-
-        if ($request->header('Accept') === 'application/vnd.ld+json') {
-            return response()->json(JsonLdTransformer::transform($term), 200, ['Content-Type' => 'application/ld+json']);
-        }
-        
-        return response()->json($term);
     }
 }
