# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\API\V1\TermController;
+use App\Http\Controllers\API\V1\TermVocabularyController;
 use Illuminate\Support\Facades\Route;
 
 Route::group([
@@ -8,6 +9,5 @@ Route::group([
     'as' => 'api.',
   ], function () {
     Route::apiResource('/terms', TermController::class);
-    // Route::get('/terms', [TermController::class, 'index'])->name('api.terms.index');
-    // Route::get('/terms/{term}', [TermController::class, 'show'])->name('api.terms.show');
+    Route::apiResource('/vocabularies/{vocabulary}/terms', TermVocabularyController::class);
 });
